Correcting Collapse style in Logement page

--- a/src/styles/Collapse.css
+++ b/src/styles/Collapse.css
@@ -59,7 +59,7 @@
     font-weight: 400;
     font-size: 18px;
     color: #ff6060;
-    padding: 20px 10px;
+    padding: 30px 20px;
     line-height: 26px;
 }
 
