--- a/src/styles/Logement.css
+++ b/src/styles/Logement.css
@@ -60,8 +60,11 @@
     max-width: 1920px;
     justify-content: space-between;
     width: 90%;
-    gap: 76px;
+    gap: 100px;
 }
 
+.equipment-list {
+    padding: 0;
+}
 @media screen and (max-width: 768px) {
 }
